2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed in the function "get_user_groups", order
	the list of groups by id_grupo for to other external operations.

2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/users/user.php, godmode/users/user_list.php: added the default
	order to columns.
	
	* godmode/agentes/modificar_agente.php: added the source code to order by
	Name, OS or group column in the list agents.

2010-07-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed an index error of
	groups array.

2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/auth/mysql.php: added function "get_users" the check to $order
	parameter if it is array, extract the field and order.
	
	* operation/users/user.php, godmode/users/user_list.php: added posibility to
	sort by columns ID User, Full name or Last Contanct.

2010-07-18  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/incidents/incident_detail.php: Change Add button to links.

	* godmode/alerts/alert_list.list.php: Centered images.

	* godmode/alerts/configure_alert_action: Added link to create command.

2010-07-16  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql: Fixed the default data inserting the
	new colum of tgrupo "propagate"

2010-07-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed the pass to parameters between
	fullscreen and windowed mode.
	Fixes: #3013769

2010-07-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: fixed lost name of report when
	delete any element of this element.
	Fixes: #3025352

2010-07-16  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/incidents/incident.php: Put create button on the right.

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: fixed typo in the tip.
	Fixes: #3029895

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>
