@@ -1,3 +1,10 @@
+2010-07-19  Raúl Mateos  <raulofpandora@gmail.com>
+
+	* operation/agentes/status_monitor.php, godmode/groups/group_list.php:
+	Center image.
+
+	* godmode/users/user_list.php: Added delete text to table.
+
 2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_db.php: fixed in the function "get_user_groups", order
